Adicionei um parágrafo

--- a/SiteExemplo/index.html
+++ b/SiteExemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quisquam quibusdam enim non, adipisci voluptatum. Vero quasi cupiditate nesciunt dolores saepe quia aut unde corrupti. Numquam voluptatibus sapiente reprehenderit quae.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum commodi quod libero laborum exercitationem ex voluptates! Odio minima adipisci ipsam! Deleniti fugit veniam incidunt harum? Porro corporis quaerat nostrum qui?</p>
 </body>
 </html>
